# image4isbn

./: .env.example  .gitignore  Makefile  README.md  docs  pyproject.toml
image4isbn/: download_covers.py  find_covers.py  summarize.py  to_items.py
image4isbn/square/: attach_images.py  discover.py  fetch_items.py
scripts/: fetch_random_isbns.py  smoke-square.sh  smoke_square.py
tests/: conftest.py  test_download_covers.py  test_find_covers.py
tests/square/: test_attach_images.py  test_fetch_items.py
