[project]
name = "image4isbn"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "python-dotenv",
    "squareup",
]

[project.scripts]
to-items = "image4isbn.to_items:main"
find-covers = "image4isbn.find_covers:main"
download-covers = "image4isbn.download_covers:main"
square-fetch-items = "image4isbn.square.fetch_items:main"
square-attach-images = "image4isbn.square.attach_images:main"
square-discover = "image4isbn.square.discover:main"
summarize = "image4isbn.summarize:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
